删除ByteReading类及测试
git-svn-id: http://nutz.googlecode.com/svn/trunk@1491 423f10f2-e3a4-11dd-a6ea-a32d6b26a33d